Bug 706787 - Crash on s390x (nsXPCComponents::AttachNewComponentsObject() fails). r=glandium